<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/albumPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <TextView
        android:layout_width="80dp"
        android:layout_height="@dimen/btnPhotoHeight"
        android:id="@+id/helpDescription"
        android:layout_toEndOf="@+id/previouslyPageDescription"
        android:layout_toStartOf="@+id/nextPageDescription"
        android:background="@drawable/description_photo"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/marginStartDescPhoto"
        android:layout_marginEnd="@dimen/marginEndDescPhoto"
        android:textColor="@color/black"
        android:text="@string/help_album"
        android:gravity="center"
        android:textSize="@dimen/textSize"
        android:paddingStart="@dimen/marginStart"
        android:paddingEnd="@dimen/marginEnd"/>
    <ImageView
        android:layout_width="@dimen/mainArrowWidth"
        android:layout_height="@dimen/mainArrowHeight"
        android:src="@drawable/arrow"
        android:layout_toStartOf="@+id/nextPage"
        android:layout_marginEnd="@dimen/marginBottomArrow"
        android:layout_above="@+id/helpDescription" />
    <Button
        android:id="@+id/backButton"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_width="@dimen/backBtnWidth"
        android:layout_height="@dimen/backBtnHeight"
        android:text="@string/exitButton"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/round_back_button_bgrnd"/>
    <ImageView
        android:id="@+id/previousPage"
        android:layout_width="@dimen/btnPhotoWidth"
        android:layout_height="@dimen/btnPhotoHeight"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:src="@drawable/prev_main"/>
    <TextView
        android:id="@+id/previouslyPageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/previousPage"
        android:textSize="@dimen/textSize"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/marginStartSmall"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/prev"/>
    <ImageView
        android:id="@+id/nextPage"
        android:layout_width="@dimen/btnPhotoWidth"
        android:layout_height="@dimen/btnPhotoHeight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:src="@drawable/next_main"/>
    <TextView
        android:id="@+id/nextPageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/nextPage"
        android:textSize="@dimen/textSize"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/marginEndSmall"
        android:layout_marginBottom="@dimen/marginBottom"
        android:textColor="@color/black"
        android:text="@string/next"/>
</RelativeLayout>