<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/backButton"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_width="@dimen/backBtnWidth"
        android:layout_height="@dimen/backBtnHeight"
        android:text="@string/exitButton"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/round_back_button_bgrnd"/>
    <RelativeLayout
        android:layout_width="@dimen/mainIconWidth"
        android:layout_height="@dimen/mainIconHeight"
        android:background="@drawable/blood_pressure"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bloodPressureValue"
            android:text="120·80"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeBloodPressure"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/bloodPressureValue"
            android:layout_marginBottom="@dimen/marginHealthSmall"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginBottom">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleBodyTemp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/marginBottomSmall"
                android:textSize="@dimen/textSizeSmall"
                android:text="@string/body_temp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RelativeLayout
                android:id="@+id/bodyTemp"
                android:layout_width="@dimen/smallIconHealthWidth"
                android:layout_height="@dimen/smallIconHealthHeight"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/titleBodyTemp"
                android:background="@drawable/body_temp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bodyTempValue"
                    android:textColor="@color/white"
                    android:text="98.6"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/marginHealthSmall"
                    android:textSize="@dimen/textSizeLarge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bodyTempValue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    android:text="@string/fahrenheit"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleHeartRate"
                android:layout_marginBottom="@dimen/marginBottomSmall"
                android:textSize="@dimen/textSizeSmall"
                android:layout_centerHorizontal="true"
                android:text="@string/heart_rate"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RelativeLayout
                android:id="@+id/heartRate"
                android:layout_width="@dimen/smallIconHealthWidth"
                android:layout_height="@dimen/smallIconHealthHeight"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/titleHeartRate"
                android:background="@drawable/heart_rate">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/heartRateValue"
                    android:textColor="@color/white"
                    android:text="85"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/marginHealthSmall"
                    android:textSize="@dimen/textSizeLarge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heartRateValue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    android:text="@string/pbm"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleOxLevel"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/marginBottomSmall"
                android:textSize="@dimen/textSizeSmall"
                android:text="@string/oxygen_level"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RelativeLayout
                android:id="@+id/oxLevel"
                android:layout_width="@dimen/smallIconHealthWidth"
                android:layout_height="@dimen/smallIconHealthHeight"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/titleOxLevel"
                android:background="@drawable/oxygen_level">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/oxLevelValue"
                    android:textColor="@color/white"
                    android:text="21"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/marginHealthSmall"
                    android:textSize="@dimen/textSizeLarge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/oxLevelValue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    android:text="@string/percent"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleSleepPhases"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/marginBottomSmall"
                android:textSize="@dimen/textSizeSmall"
                android:text="@string/phases_level"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RelativeLayout
                android:id="@+id/sleepPhases"
                android:layout_width="@dimen/smallIconHealthWidth"
                android:layout_height="@dimen/smallIconHealthHeight"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/titleSleepPhases"
                android:background="@drawable/sleep_phases">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sleepPhasesLevel"
                    android:textColor="@color/white"
                    android:text="89"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/marginHealthSmall"
                    android:textSize="@dimen/textSizeLarge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sleepPhasesLevel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    android:text="@string/percent"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>