<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/notificationPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnPhotoHeight"
        android:id="@+id/okClose"
        android:layout_marginTop="@dimen/marginTopSmall"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:textStyle="bold"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/okClose"
        android:paddingStart="@dimen/marginStartDescPhoto"
        android:paddingEnd="@dimen/marginEndDescPhoto"
        android:background="@drawable/custom_congratulate_button"
        android:textAllCaps="false"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/previousPage"
        android:layout_width="@dimen/btnPhotoWidth"
        android:layout_height="@dimen/btnPhotoHeight"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:src="@drawable/prev_main"/>
    <TextView
        android:id="@+id/previouslyPageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/previousPage"
        android:textSize="@dimen/textSize"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/marginStartSmall"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/prev"/>

    <ImageView
        android:id="@+id/nextPage"
        android:layout_width="@dimen/btnPhotoWidth"
        android:layout_height="@dimen/btnPhotoHeight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:src="@drawable/next_main"/>

    <TextView
        android:id="@+id/nextPageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/nextPage"
        android:textSize="@dimen/textSize"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/marginEndSmall"
        android:layout_marginBottom="@dimen/marginBottom"
        android:textColor="@color/black"
        android:text="@string/next"/>
</RelativeLayout>