<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/mainRelativePhoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">
    <android.support.v4.view.ViewPager
        android:id="@+id/photoAlbumPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statusBarPhoto"
        android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_charge"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeSmall"
            android:layout_toStartOf="@+id/batteryLayout"/>
        <RelativeLayout
            android:id="@+id/batteryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/marginEndSmall">
            <ProgressBar
                android:id="@+id/batteryIndicator"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:minWidth="200dip"
                android:minHeight="100dip"
                android:max="100"
                android:progressDrawable="@drawable/battery_change_fill_photo"
                style="?android:attr/progressBarStyleHorizontal"/>
            <TextView
                android:id="@+id/percentIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textSize="@dimen/textSizeSmall"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/wifiStrength"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:src="@drawable/photo_signal0"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeSmall"
            android:layout_toEndOf="@+id/wifiStrength"
            android:text="@string/wifi_strength"/>
        <TextClock
            android:id="@+id/mainClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:textSize="@dimen/textSizeStatusBarClock"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:format24Hour="kk:mm" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/previousPage"
        android:layout_width="@dimen/btnPhotoWidth"
        android:layout_height="@dimen/btnPhotoHeight"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:src="@drawable/previous"/>
    <ImageView
        android:id="@+id/nextPage"
        android:layout_width="@dimen/btnPhotoWidth"
        android:layout_height="@dimen/btnPhotoHeight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:src="@drawable/next"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/descriptionPhoto"
        android:layout_toEndOf="@+id/previousPage"
        android:layout_toStartOf="@+id/nextPage"
        android:background="@drawable/description_photo"
        android:maxLines = "10"
        android:minLines="1"
        android:layout_marginBottom="@dimen/marginBottomSmall"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/marginStartDescPhoto"
        android:layout_marginEnd="@dimen/marginEndDescPhoto"
        android:textColor="@color/dark_blue"
        android:gravity="center"
        android:text="Text"
        android:textSize="@dimen/textSize"
        android:paddingStart="@dimen/marginStartSmall"
        android:paddingEnd="@dimen/marginEndSmall"/>
    <Button
        android:id="@+id/backButton"
        android:layout_width="@dimen/backBtnWidth"
        android:layout_height="@dimen/backBtnHeight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:clickable="true"
        android:layout_below="@+id/statusBarPhoto"
        android:text="@string/exitButton"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:background="@drawable/custom_back_button_photo" />
    <TextView
        android:id="@+id/countPhoto"
        android:layout_width="@dimen/backBtnWidth"
        android:layout_height="@dimen/backBtnHeight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@+id/statusBarPhoto"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        android:text="text"
        android:gravity="center"
        android:background="@drawable/custom_back_button_photo"
        android:textColor="@color/dark_blue"/>
</RelativeLayout>